[tool.poetry]
name = "q-gen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "q_gen"}]

[tool.poetry.dependencies]
python = "^3.10"
shell = "^1.0.1"
pre-commit = "^3.0.4"
rich = "^13.3.1"
transformers = "^4.26.1"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
ipython = "^8.10.0"
sentencepiece = "^0.1.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
